# garnet

./: .gitignore  Cargo.toml  README.md  rust_fidl_crates.json  rustfmt.toml
drivers/bluetooth/host/: driver.cc  gatt_remote_service_device.cc  gatt_remote_service_device.h  host_device.cc  host_device.h
drivers/bluetooth/host/fidl/: gatt_remote_service_server.cc  gatt_remote_service_server.h  host_server.cc  host_server.h
drivers/bluetooth/lib/common/: status.h
drivers/bluetooth/lib/data/: BUILD.gn  domain.cc  l2cap_socket_channel_relay.cc  l2cap_socket_channel_relay.h  l2cap_socket_factory.cc  l2cap_socket_factory.h  rfcomm_socket_channel_relay.cc  rfcomm_socket_channel_relay.h  rfcomm_socket_factory.cc  rfcomm_socket_factory.h  socket_channel_relay.cc  socket_channel_relay.h  socket_channel_relay_unittest.cc  socket_factory.cc  socket_factory.h  socket_factory_unittest.cc
drivers/bluetooth/lib/gap/: BUILD.gn  adapter.cc  adapter.h  bredr_connection_manager.cc  low_energy_connection_manager.cc  low_energy_connection_manager.h  pairing_delegate.h  remote_device.h
drivers/bluetooth/lib/gatt/: client_unittest.cc  connection.cc  connection.h  fake_layer.cc  fake_layer.h  gatt.cc  gatt.h  remote_service.cc  remote_service.h  remote_service_manager_unittest.cc
drivers/bluetooth/lib/hci/: command_channel_unittest.cc  hci.h
drivers/bluetooth/lib/l2cap/: fake_layer.cc  fake_layer.h  l2cap.cc  l2cap.h
drivers/bluetooth/lib/rfcomm/: channel.cc  channel.h
drivers/bluetooth/lib/sm/: bearer.cc  bearer.h  bearer_unittest.cc  pairing_state.cc  pairing_state.h  util.cc
drivers/bluetooth/lib/testing/: test_controller.cc  test_controller.h
drivers/telephony/qmi/: BUILD.gn  binding.c  qmi.c  qmi.h
drivers/telephony/qmi-transport/: BUILD.gn  qmi-usb-transport.c  qmi.c  qmi.h
drivers/telephony/qmi-usb/: qmi-usb.c  qmi-usb.h
drivers/telephony/qmi-usb-transport/: qmi-usb-transport.c
drivers/wlan/dispatcher/: BUILD.gn
drivers/wlan/dispatcher/include/wlan/dispatcher/: dispatcher.h
drivers/wlan/testing/: BUILD.gn  phy-device.cpp  phy-device.h
drivers/wlan/testing/util/: BUILD.gn  Cargo.toml
drivers/wlan/wlanif/: convert.cpp  convert.h  device.cpp  device.h
drivers/wlan/wlanif/test/: binding.c
examples/fidl/echo2_client_rust/: BUILD.gn
examples/fidl/echo2_client_rust/src/: main.rs
examples/fidl/echo2_server_rust/: BUILD.gn
examples/fidl/echo2_server_rust/src/: main.rs
examples/fidl2/echo2_client_cpp/: BUILD.gn  echo2_client.cc
examples/fidl2/echo2_client_cpp/meta/: sandbox
examples/fidl_perftest/perftest_client_cpp/: BUILD.gn  perftest_client.cc  perftest_client_app.cc  perftest_client_app.h
examples/fidl_perftest/perftest_server_cpp/: BUILD.gn  perftest_server.cc  perftest_server_app.cc  perftest_server_app.h
examples/fidl_perftest/services/: BUILD.gn  perftest.fidl
examples/http/httpget_rust/: BUILD.gn
examples/http/httpget_rust/src/: main.rs
examples/media/audio_player_rust/: BUILD.gn
examples/media/audio_player_rust/src/: main.rs
examples/rust/: BUILD.gn
examples/rust/spinning_square_rs/: BUILD.gn  Cargo.toml  rustfmt.toml
examples/rust/spinning_square_rs/src/: main.rs  spinning_square_view.rs
examples/rust101/hello/: BUILD.gn
examples/ui/: BUILD.gn
examples/ui/hello_spaces/: BUILD.gn  app.cc  app.h  main.cc  subspace.cc
examples/ui/spinning_square_rs/: BUILD.gn
examples/ui/spinning_square_rs/src/: main.rs
examples/ui/video_display/: BUILD.gn  buffer.cc  buffer.h  camera_client.cpp  camera_client.h  fake_driver.h  frame_scheduler.cc  frame_scheduler.h  main.cc  video_device_stream.h  view.cc  view.h
go/src/netstack/: netstack.go  netstack_service.go  netstack_service_impl_test.go
lib/bluetooth/fidl/: BUILD.gn  host.fidl
lib/perftest/: BUILD.gn  main.cc
lib/perftest/protos/: perftest.proto
lib/rust/avdtp/: BUILD.gn
lib/rust/crates/qmi/: BUILD.gn
lib/rust/crates/qmi/src/: lib.rs
lib/rust/qmi/: BUILD.gn
lib/telephony/: BUILD.gn  qmi.fidl
lib/telephony/qmi-protocol/: BUILD.gn
lib/telephony/qmi-protocol/protocol/: ctl.json
lib/telephony/qmi-protocol/src/: ast.rs  codegen.rs  lib.rs  main.rs  tests.rs
lib/telephony/qmi-protocol/tests/: codegen_tests.rs  macros.rs
lib/wlan/fidl2/: BUILD.gn  phy.fidl
manifest/: garnet  minimal  third_party
public/fidl/fuchsia.bluetooth.gatt/: BUILD.gn
public/fidl/fuchsia.developer.open/: BUILD.gn  open.fidl
public/fidl/fuchsia.netstack/: netstack.fidl
public/fidl/fuchsia.telephony.manager/: BUILD.gn  manager.fidl
public/fidl/fuchsia.telephony.qmi/: BUILD.gn  device_management.fidl  qmi.fidl
public/fidl/fuchsia.telephony.ril/: ril.fidl
public/fidl/fuchsia.telephony.transport/: BUILD.gn  qmi.fidl
public/rust/crates/: BUILD.gn
public/rust/crates/fuchsia-vfs/: BUILD.gn
public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher/: BUILD.gn
public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher/src/: lib.rs
public/rust/crates/fuchsia-vfs/src/: lib.rs  mount.rs  vfs.rs
public/rust/fidl_crates/fidl_luthier/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/fidl_luthier/src/: lib.rs
public/rust/fidl_crates/garnet_public_lib_images_fidl/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/garnet_public_lib_images_fidl/src/: lib.rs
public/rust/fidl_crates/garnet_public_lib_ui_geometry_fidl/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/garnet_public_lib_ui_geometry_fidl/src/: lib.rs
public/rust/fidl_crates/garnet_public_lib_ui_input_fidl/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/garnet_public_lib_ui_input_fidl/src/: lib.rs
public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl_presentation_info/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl_presentation_info/src/: lib.rs
public/rust/fidl_crates/garnet_public_lib_ui_views_fidl/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/garnet_public_lib_ui_views_fidl/src/: lib.rs
public/rust/fidl_crates/garnet_public_lib_ui_views_fidl_view_system_fidl/: BUILD.gn  Cargo.toml
public/rust/fidl_crates/garnet_public_lib_ui_views_fidl_view_system_fidl/src/: lib.rs
(+95 files in other folders)
