[workspace]
members = [
    'bin/device_settings',
    'bin/logger',
    'bin/wlancfg',
    'bin/wlanstack',
    'bin/wlantool',
    'drivers/wlan/testing/util',
    'examples/bluetooth/ble_battery_service',
    'examples/fidl/*_rust',
    'examples/network/wget-rs',
    'examples/rust/spinning_square_rs',
    'examples/rust/testing',
    'lib/rust/crates/eapol',
    'lib/rust/crates/fuchsia-wlan-dev',
    'lib/rust/crates/wlan-rsn',
    'lib/rust/crates/wlan-sme',
    'lib/rust/fidl_crates/garnet_lib_wlan_fidl',
    'lib/rust/fidl_crates/garnet_lib_wlan_fidl_service',
    'public/lib/fidl/rust/fidl',
    'public/rust/crates/ddk-rs',
    'public/rust/crates/ddk-rs/examples/ddk_toy',
    'public/rust/crates/ddk-rs/examples/microorb',
    'public/rust/crates/fdio',
    'public/rust/crates/fuchsia-app',
    'public/rust/crates/fuchsia-async',
    'public/rust/crates/fuchsia-llui',
    'public/rust/crates/fuchsia-vfs',
    'public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher',
    'public/rust/crates/fuchsia-zircon',
    'public/rust/crates/fuchsia-zircon/fuchsia-zircon-sys',
    'public/rust/crates/mxruntime',
    'public/rust/crates/mxruntime/mxruntime-sys',
    'public/rust/crates/tokio-fuchsia',
    'public/rust/fidl_crates/garnet_examples_fidl_services',
    'public/rust/fidl_crates/garnet_public_lib_app_fidl',
    'public/rust/fidl_crates/garnet_public_lib_app_fidl_service_provider',
    'public/rust/fidl_crates/garnet_public_lib_bluetooth_fidl',
    'public/rust/fidl_crates/garnet_public_lib_device_settings_fidl',
    'public/rust/fidl_crates/garnet_public_lib_fsl_fidl',
    'public/rust/fidl_crates/garnet_public_lib_images_fidl',
    'public/rust/fidl_crates/garnet_public_lib_logger_fidl',
    'public/rust/fidl_crates/garnet_public_lib_mdns_fidl',
    'public/rust/fidl_crates/garnet_public_lib_netstack_fidl_net_address',
    'public/rust/fidl_crates/garnet_public_lib_network_fidl',
    'public/rust/fidl_crates/garnet_public_lib_power_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_geometry_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_input_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl_dummy_system_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl_presentation_info',
    'public/rust/fidl_crates/garnet_public_lib_ui_scenic_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_views_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_views_fidl_view_system_fidl',
    'public/rust/fidl_crates/garnet_public_lib_ui_views_fidl_view_token',
]
[patch.crates-io.ddk-rs]
path = 'public/rust/crates/ddk-rs'

[patch.crates-io.eapol]
path = 'lib/rust/crates/eapol'

[patch.crates-io.fdio]
path = 'public/rust/crates/fdio'

[patch.crates-io.fidl]
path = 'public/lib/fidl/rust/fidl'

[patch.crates-io.fuchsia-app]
path = 'public/rust/crates/fuchsia-app'

[patch.crates-io.fuchsia-async]
path = 'public/rust/crates/fuchsia-async'

[patch.crates-io.fuchsia-vfs-watcher]
path = 'public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher'

[patch.crates-io.fuchsia-wlan-dev]
path = 'lib/rust/crates/fuchsia-wlan-dev'

[patch.crates-io.fuchsia-zircon]
path = 'public/rust/crates/fuchsia-zircon'

[patch.crates-io.fuchsia-zircon-sys]
path = 'public/rust/crates/fuchsia-zircon/fuchsia-zircon-sys'

[patch.crates-io.garnet_examples_fidl_services]
path = 'public/rust/fidl_crates/garnet_examples_fidl_services'

[patch.crates-io.garnet_lib_wlan_fidl]
path = 'lib/rust/fidl_crates/garnet_lib_wlan_fidl'

[patch.crates-io.garnet_lib_wlan_fidl_service]
path = 'lib/rust/fidl_crates/garnet_lib_wlan_fidl_service'

[patch.crates-io.garnet_public_lib_app_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_app_fidl'

[patch.crates-io.garnet_public_lib_app_fidl_service_provider]
path = 'public/rust/fidl_crates/garnet_public_lib_app_fidl_service_provider'

[patch.crates-io.garnet_public_lib_bluetooth_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_bluetooth_fidl'

[patch.crates-io.garnet_public_lib_device_settings_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_device_settings_fidl'

[patch.crates-io.garnet_public_lib_fsl_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_fsl_fidl'

[patch.crates-io.garnet_public_lib_images_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_images_fidl'

[patch.crates-io.garnet_public_lib_logger_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_logger_fidl'

[patch.crates-io.garnet_public_lib_mdns_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_mdns_fidl'

[patch.crates-io.garnet_public_lib_netstack_fidl_net_address]
path = 'public/rust/fidl_crates/garnet_public_lib_netstack_fidl_net_address'

[patch.crates-io.garnet_public_lib_network_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_network_fidl'

[patch.crates-io.garnet_public_lib_power_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_power_fidl'

[patch.crates-io.garnet_public_lib_ui_geometry_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_geometry_fidl'

[patch.crates-io.garnet_public_lib_ui_input_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_input_fidl'

[patch.crates-io.garnet_public_lib_ui_mozart_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl'

[patch.crates-io.garnet_public_lib_ui_mozart_fidl_dummy_system_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl_dummy_system_fidl'

[patch.crates-io.garnet_public_lib_ui_mozart_fidl_presentation_info]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_mozart_fidl_presentation_info'

[patch.crates-io.garnet_public_lib_ui_scenic_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_scenic_fidl'

[patch.crates-io.garnet_public_lib_ui_views_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_views_fidl'

[patch.crates-io.garnet_public_lib_ui_views_fidl_view_system_fidl]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_views_fidl_view_system_fidl'

[patch.crates-io.garnet_public_lib_ui_views_fidl_view_token]
path = 'public/rust/fidl_crates/garnet_public_lib_ui_views_fidl_view_token'

[patch.crates-io.mio]
path = '../third_party/rust-mirrors/mio'

[patch.crates-io.mxruntime]
path = 'public/rust/crates/mxruntime'

[patch.crates-io.mxruntime-sys]
path = 'public/rust/crates/mxruntime/mxruntime-sys'

[patch.crates-io.rand]
path = '../third_party/rust-mirrors/rand'

[patch.crates-io.tokio-core]
path = '../third_party/rust-mirrors/tokio-core'

[patch.crates-io.tokio-fuchsia]
path = 'public/rust/crates/tokio-fuchsia'

[patch.crates-io.wlan-rsn]
path = 'lib/rust/crates/wlan-rsn'

[patch.crates-io.wlan-sme]
path = 'lib/rust/crates/wlan-sme'
