# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/fuchsia/rules.gni")
import("//build/package.gni")

package("qmi") {
  deprecated_system_image = true

  deps = [
    ":qmi_driver"
  ]

  drivers = [ {
    name = "qmi.so"
  } ]
}

driver_module("qmi_driver") {
  output_name = "qmi"

  sources = [
#    "binding.c",
    "qmi.c",
    "qmi.h",
  ]

  deps = [
    "//zircon/public/lib/ddk",
    "//zircon/public/lib/driver",
    "//zircon/public/lib/zx",
    "//zircon/public/lib/usb",
    "//zircon/public/lib/fit",
    "//zircon/public/lib/sync",
    "//zircon/public/lib/async-loop-cpp",
    "//garnet/public/lib/fsl",
    "//zircon/public/lib/usb",
  ]

  configs += [ "//build/config/fuchsia:enable_zircon_asserts" ]
  configs -= [ "//build/config/fuchsia:no_cpp_standard_library" ]
  configs += [ "//build/config/fuchsia:static_cpp_standard_library" ]
}
