# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("wlan_dispatcher_config") {
  include_dirs = [ "include" ]
}

source_set("dispatcher") {
  sources = [
    "include/wlan/dispatcher/dispatcher.h",
  ]

  public_configs = [ ":wlan_dispatcher_config" ]
  configs += [ "//build/config/fuchsia:enable_zircon_asserts" ]

  public_deps = [
    "//garnet/public/lib/fidl/cpp",
  ]

  deps = [
    "//zircon/public/lib/zx",
    "//zircon/public/lib/async-cpp",
    "//zircon/public/lib/async-loop-cpp",
  ]
}
