# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

executable("bin") {
  output_name = "echo2_client_cpp"

  sources = [
    "echo2_client.cc",
  ]

  deps = [
    "//garnet/lib/wlan/fidl2",
    "//garnet/lib/wlan/protocol",
    "//garnet/public/lib/fidl/cpp",
  ]
}

package("echo2_client_cpp") {
  deps = [
    ":bin",
  ]

  binary = "echo2_client_cpp"

  meta = [ {
    path = rebase_path("meta/sandbox")
    dest = "sandbox"
  } ]
}
