# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

source_set("lib") {
  sources = [
    "perftest_client_app.cc",
    "perftest_client_app.h",
  ]

  public_deps = [
    "//garnet/examples/fidl_perftest/services:perftest",
    "//garnet/public/lib/app/cpp",
    "//garnet/public/lib/fidl/cpp",
  ]
}

executable("bin") {
  output_name = "perftest_client_cpp"

  sources = [
    "perftest_client.cc",
  ]

  deps = [
    ":lib",
    "//garnet/examples/fidl_perftest/services:perftest",
    "//garnet/public/lib/app/cpp",
    "//garnet/public/lib/fidl/cpp",
    "//garnet/public/lib/svc/cpp",
    "//zircon/public/lib/async-default",
    "//zircon/public/lib/async-loop-cpp",
  ]
}

package("perftest_client_cpp") {
  deps = [
    ":bin",
  ]

  binary = "perftest_client_cpp"
}
