# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_binary.gni")
import("//build/package.gni")

rust_binary("spinning_square_view_rs") {
  name = "spinning_square_view_rs"

  deps = [
    "//garnet/public/rust/fidl_crates/garnet_public_lib_app_fidl",
    "//garnet/public/rust/fidl_crates/garnet_public_lib_ui_views_fidl",
  ]
}

package("spinning_square_rs") {
  deps = [
    ":spinning_square_view_rs_bin",
  ]

  binary = "spinning_square_view_rs"

  meta = [{
    path = rebase_path("meta/sandbox")
    dest = "sandbox"
  }]
}
