# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_binary.gni")
import("//build/package.gni")

rustc_binary("spinning_square_rs") {
  name = "spinning_square_rs"

  with_lto = "fat"

  deps = [
    "//garnet/public/rust/crates/fuchsia-app",
    "//garnet/public/rust/crates/fuchsia-zircon",
    "//garnet/public/rust/crates/fuchsia-async",
    "//garnet/public/lib/fidl/rust/fidl",
    "//garnet/public/fidl/fuchsia.ui.scenic:fuchsia.ui.scenic-rustc",
    "//garnet/public/fidl/fuchsia.ui.views_v1:fuchsia.ui.views_v1-rustc",
    "//garnet/public/fidl/fuchsia.ui.views_v1_token:fuchsia.ui.views_v1_token-rustc",
    "//third_party/rust-crates/rustc_deps:futures",
    "//third_party/rust-crates/rustc_deps:failure",
  ]
}
