# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_library.gni")
import("//build/package.gni")

rustc_library("qmi") {
  edition = "2018"
  deps = [
    "//third_party/rust-crates/rustc_deps:failure",
    "//third_party/rust-crates/rustc_deps:bytes",
    "//garnet/public/rust/crates/fuchsia-app",
    "//garnet/public/rust/crates/fdio",
    "//garnet/public/rust/crates/fuchsia-zircon",
  ]
}
