# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_library.gni")

rustc_library("fuchsia-vfs") {
  edition = "2018"
  with_unit_tests = true
  deps = [
    "//garnet/public/rust/crates/fdio",
    "//garnet/public/rust/crates/fuchsia-async",
    "//garnet/public/rust/crates/fuchsia-zircon",
    "//third_party/rust-crates/rustc_deps:bytes",
    "//third_party/rust-crates/rustc_deps:futures-preview",
    "//third_party/rust-crates/rustc_deps:libc",
    "//third_party/rust-crates/rustc_deps:tempdir",
  ]

  non_rust_deps = [
    "//zircon/public/lib/fs-management",
  ]
}
