# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_library.gni")

rust_library("garnet_public_lib_ui_geometry_fidl") {
  deps = [
    "//garnet/public/lib/ui/geometry/fidl:fidl_rust",
  ]
}
