# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_library.gni")

rust_library("garnet_public_lib_ui_views_fidl_view_system_fidl") {
  deps = [
    "//garnet/public/lib/ui/views/fidl:view_system_fidl_rust",
    "//garnet/public/rust/fidl_crates/garnet_public_lib_app_fidl_service_provider",
    "//garnet/public/rust/fidl_crates/garnet_public_lib_ui_geometry_fidl",
    "//garnet/public/rust/fidl_crates/garnet_public_lib_ui_input_fidl",
    "//garnet/public/rust/fidl_crates/garnet_public_lib_ui_scenic_fidl",
  ]
}
